# Zipline-lightclient

./: .gitignore  README.md
bacon/: Cargo.toml  README.md
bacon/src/: finalized_header.rs  lib.rs  types.rs  update_sync_committee.rs
cannon/: package-lock.json  package.json
cannon/contracts/: Challenge.sol
cannon/minigeth/: fetching-preimages.md
cannon/minigeth/consensus/ethash/: fake_ethash.go
cannon/minigeth/core/: fake_blockchain.go  state_processor.go
cannon/minigeth/core/state/: database.go  state_object.go  statedb.go
cannon/minigeth/core/types/: receipt.go
cannon/minigeth/oracle/: embedded_mips.go  prefetch.go  preimage.go
cannon/minigeth/params/: config.go
cannon/minigeth/rlp/: unsafe.go
cannon/minigeth/rpc/: json.go  types.go
cannon/minigeth/trie/: database.go  secure_trie.go  stacktrie.go  trie.go
cannon/mipsevm/: main.go
cannon/scripts/: challenge.js  deploy.js  lib.js  submitUpdate.js
cannon/test/: update_test.js
chain-fetcher-cli/: .prettierrc  package.json  tsconfig.json
chain-fetcher-cli/src/: createInvalidUpdate.ts  createUpdate.ts  getCurrentInput.ts
light-client-rs/: Cargo.toml  README.md
light-client-rs/src/: check_sync_committee_update.rs  constants.rs  finalized_header.rs  lib.rs  ssz_types.rs  typess.rs  update_sync_committee.rs  utils.rs
light-client-rs/src/types/: beacon_block_header.rs  h256.rs  mod.rs  sync_aggregate.rs  sync_committee.rs  sync_committee_period_update.rs
light-client-rs/tests/: integration_tests.rs
light-client-verification-cli/: Cargo.toml
light-client-verification-cli/src/: main.rs
light-client-verification-mips/: Cargo.toml  Makefile  README.md  build.sh
light-client-verification-mips/src/: iommu.rs  main.rs
rust-in-my-cannon/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  elf2bin.py
rust-in-my-cannon/src/: iommu.rs  main.rs
shortbarrel/: package.json  tsconfig.json
shortbarrel/src/: createUpdate.ts  index.ts
shortcut-rs/: Cargo.toml
shortcut-rs/src/: main.rs
