[package]
name = "rust-in-my-cannon"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10.3"
rlibc = "1.0.0"
bacon = { path = "../light-client-rs" }

[build-dependencies]
cc = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
